force-app/main/default/objects/Contact/fields/Citizenship_Status__c.field-meta.xml
<CustomField>
    <fullName>Citizenship_Status__c</fullName>
    <label>Citizenship Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>