force-app/main/default/objects/Contact/fields/Grant_Application__c.field-meta.xml
<CustomField>
    <fullName>Grant_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grant Application</label>
    <referenceTo>Grant_Application__c</referenceTo>
    <relationshipLabel>Active Grant Applicants</relationshipLabel>
    <relationshipName>Active_Grant_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>