force-app/main/default/objects/Contact/fields/IsEligible__c.field-meta.xml
<CustomField>
    <fullName>IsEligible__c</fullName>
    <formula>Monthly_Income__c &lt; 1800</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsEligible</label>
    <type>Checkbox</type>
</CustomField>