force-app/main/default/objects/Contact/fields/ReceivedMonths__c.field-meta.xml
<CustomField>
    <fullName>ReceivedMonths__c</fullName>
    <description
  >Number of paid disbursement records. Matches the receivedMonths calculation used to rebuild the remaining grant schedule.</description>
    <label>Received Months</label>
    <summaryFilterItems>
        <field>Grant_Disbursement__c.Grant_is_disbursed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey
  >Grant_Disbursement__c.Grant_Applicant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>