force-app/main/default/objects/Contact/fields/Support_Option__c.field-meta.xml
<CustomField>
    <fullName>Support_Option__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Support Option</label>
    <referenceTo>Support_Option__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>