force-app/main/default/objects/Contact/fields/TotalDisbursements__c.field-meta.xml
<CustomField>
    <fullName>TotalDisbursements__c</fullName>
    <label>TotalDisbursements</label>
    <summarizedField
  >Grant_Disbursement__c.Amount_to_be_disbursed__c</summarizedField>
    <summaryForeignKey
  >Grant_Disbursement__c.Grant_Applicant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>