force-app/main/default/objects/Contact/validationRules/Mailing_Postal_Code_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Mailing_Postal_Code_Format</fullName>
    <active>true</active>
    <description
  >Requires applicant mailing postal code to be exactly 6 digits.</description>
    <errorConditionFormula>AND(
    OR(
        NOT(ISBLANK(Support_Option__c)),
        NOT(ISBLANK(Monthly_Income__c))
    ),
    NOT(REGEX(MailingPostalCode, &quot;^[0-9]{6}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>MailingPostalCode</errorDisplayField>
    <errorMessage>Mailing Postal Code must be a 6 digit number.</errorMessage>
</ValidationRule>